--- a/admin.html
+++ b/admin.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>admin vue</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-16x16.png"><link rel="shortcut icon" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon.ico"><link href="/./assets/css/normalize.css" rel="stylesheet"><link href="/./assets/css/styles.admin.css" rel="stylesheet"></head>
+  <link rel="icon" type="image/png" sizes="32x32" href="/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-16x16.png"><link rel="shortcut icon" href="/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon.ico"><link href="/portfolio_pages/assets/css/normalize.css" rel="stylesheet"><link href="/portfolio_pages/assets/css/styles.admin.css" rel="stylesheet"></head>
   <body>
     <div id="admin-app"></div>
-  <script type="text/javascript" src="/app/common.bundle.js"></script><script type="text/javascript" src="/app/admin.bundle.js"></script></body>
+  <script type="text/javascript" src="/portfolio_pages/app/common.bundle.js"></script><script type="text/javascript" src="/portfolio_pages/app/admin.bundle.js"></script></body>
 </html>
