--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>.svg-use,.svg_next{max-width: 2rem;}</style>
     <title>welcome WEB Разработка</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-16x16.png"><link rel="shortcut icon" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon.ico"><link href="/./assets/css/normalize.css" rel="stylesheet"><link href="/./assets/css/styles.index.css" rel="stylesheet"></head>
+  <link rel="icon" type="image/png" sizes="32x32" href="/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-16x16.png"><link rel="shortcut icon" href="/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon.ico"><link href="/portfolio_pages/assets/css/normalize.css" rel="stylesheet"><link href="/portfolio_pages/assets/css/styles.index.css" rel="stylesheet"></head>
   <body class="hero">
     <!--[if lt IE 8]> <p class="chromeframe">Похоже, что ты используешь устаревший браузер, друг. Пожалуйста, <a href="http:// browsehappy.com/">скачай новый браузер абсолютно бесплатно</a> или <a href="http://www.google.com/chromeframe/?redirect=true">активируй Google Chrome Frame</a></p> <![endif]-->
     <div class="l-wrapper" style="display:none">
       <div class="l-parallax__container" id="parallax">
-        <div class="parallax-layer" data-speed="0.01"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_1.png" alt="" style="display:none;"></div>
-        <div class="parallax-layer" data-speed="0.02"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_2.png" alt="" style="display:none;"></div>
-        <div class="parallax-layer" data-speed="0.03"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_3.png" alt="" style="display:none;"></div>
-        <div class="parallax-layer" data-speed="0.04"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_4.png" alt="" style="display:none;"></div>
-        <div class="parallax-layer" data-speed="0.05"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_5.png" alt="" style="display:none;"></div>
-        <div class="parallax-layer" data-speed="0.06"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_6.png" alt="" style="display:none;"></div>
-        <div class="parallax-layer" data-speed="0.07"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_7.png" alt="" style="display:none;"></div>
-        <div class="parallax-layer" data-speed="0.08"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_8.png" alt="" style="display:none;"></div>
-        <div class="parallax-layer" data-speed="0.09"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_9.png" alt="" style="display:none;"></div>
-        <div class="parallax-layer" data-speed="0.1"><img class="parallax-layer__img" src="/assets/images/decor/bg/parallax/layer_10.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.01"><img class="parallax-layer__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_1.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.02"><img class="parallax-layer__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_2.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.03"><img class="parallax-layer__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_3.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.04"><img class="parallax-layer__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_4.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.05"><img class="parallax-layer__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_5.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.06"><img class="parallax-layer__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_6.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.07"><img class="parallax-layer__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_7.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.08"><img class="parallax-layer__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_8.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.09"><img class="parallax-layer__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_9.png" alt="" style="display:none;"></div>
+        <div class="parallax-layer" data-speed="0.1"><img class="parallax-layer__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_10.png" alt="" style="display:none;"></div>
       </div>
       <div class="l-login__button" id="targetLogin">
         <button class="c-button" id="butLogin"><span class="c-button__text">Авторизоваться</span></button>
@@ -31,7 +31,7 @@
         <div class="l-flip-container">
           <div class="l-face-container">
             <div class="c-welcome">
-              <div class="c-welcome__img-wrap" style="background-image: url('../../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-welcome__img visually-hidden" alt="" src="/assets/images/content/photo.jpg"></div>
+              <div class="c-welcome__img-wrap" style="background-image: url('../../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-welcome__img visually-hidden" alt="" src="/portfolio_pages/assets/images/content/photo.jpg"></div>
               <div class="c-welcome__content">
                 <h1 class="c-welcome__header">Yuliya Volkova</h1>
                 <h2 class="c-welcome__desc">Личный сайт WEB Разработчика</h2>
@@ -150,5 +150,5 @@
       <div class="loader-section section-left"></div>
       <div class="loader-section section-right"></div>
     </div>
-  <script type="text/javascript" src="/app/common.bundle.js"></script><script type="text/javascript" src="/app/index.bundle.js"></script></body>
+  <script type="text/javascript" src="/portfolio_pages/app/common.bundle.js"></script><script type="text/javascript" src="/portfolio_pages/app/index.bundle.js"></script></body>
 </html>
