--- a/my_works.html
+++ b/my_works.html
@@ -8,21 +8,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>.svg-use,.svg_next{max-width: 2rem;}</style>
     <title>Мои работы</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-16x16.png"><link rel="shortcut icon" href="/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon.ico"><link href="/./assets/css/normalize.css" rel="stylesheet"><link href="/./assets/css/styles.my_works.css" rel="stylesheet"></head>
+  <link rel="icon" type="image/png" sizes="32x32" href="/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon-16x16.png"><link rel="shortcut icon" href="/portfolio_pages/icons-e37e1b74e0ab6134f431d1e0ff2f44e4/favicon.ico"><link href="/portfolio_pages/assets/css/normalize.css" rel="stylesheet"><link href="/portfolio_pages/assets/css/styles.my_works.css" rel="stylesheet"></head>
   <body>
     <!--[if lt IE 8]> <p class="chromeframe">Похоже, что ты используешь устаревший браузер, друг. Пожалуйста, <a href="http:// browsehappy.com/">скачай новый браузер абсолютно бесплатно</a> или <a href="http://www.google.com/chromeframe/?redirect=true">активируй Google Chrome Frame</a></p> <![endif]-->
     <div class="l-wrapper" style="display:none">
       <header class="l-section l-hero" data-section="1section">
         <div class="l-scroll-parallax-container">
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_1.png" alt="" style="display:none;"></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_2.png" alt="" style="display:none;"></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_3.png" alt="" style="display:none;"></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_4.png" alt="" style="display:none;"></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_5.png" alt="" style="display:none;"></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_6.png" alt="" style="display:none;"></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_7.png" alt="" style="display:none;"></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_8.png" alt="" style="display:none;"></div>
-          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/assets/images/decor/bg/parallax/layer_9.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_1.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_2.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_3.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_4.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_5.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_6.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_7.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_8.png" alt="" style="display:none;"></div>
+          <div class="l-scroll-parallax__layer"><img class="l-scroll-parallax__img" src="/portfolio_pages/assets/images/decor/bg/parallax/layer_9.png" alt="" style="display:none;"></div>
           <ul class="l-hero__social">
             <li class="l-hero__social-item"><a class="l-hero__social-link" href="https://yuliyavolkova.github.io/portfolio_pages/pages/about.html" target="_blank">
                 <svg class="svg-use">
@@ -118,7 +118,7 @@
           </svg>
           <div class="l-hero__develop">
             <div class="c-developer">
-              <div class="c-developer__img-wrap" style="background-image: url('../../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="/assets/images/content/photo.jpg"></div>
+              <div class="c-developer__img-wrap" style="background-image: url('../../assets/images/content/photo.jpg'); background-repeat:no-repeat;"><img class="c-developer__img visually-hidden" alt="" src="/portfolio_pages/assets/images/content/photo.jpg"></div>
               <div class="c-developer__content">
                 <h1 class="c-developer__header">Yuliya Volkova</h1>
                 <h2 class="c-developer__desc">Личный сайт WEB Разработчика</h2>
@@ -364,5 +364,5 @@
       <div class="loader-section section-left"></div>
       <div class="loader-section section-right"></div>
     </div>
-  <script type="text/javascript" src="/app/common.bundle.js"></script><script type="text/javascript" src="/app/my_works.bundle.js"></script></body>
+  <script type="text/javascript" src="/portfolio_pages/app/common.bundle.js"></script><script type="text/javascript" src="/portfolio_pages/app/my_works.bundle.js"></script></body>
 </html>
